@@ -1,3 +1,4 @@
+* BUG#9171 Add searcher on invoice sepa mandate
 * BUG#9120 Correction de l'initialisation du mandat sepa lors de l'activation de contrats non quittancés
 * BUG#8828 Add a new mandate update method from contract data
 
